@startuml
class Ship {
    -name: String
    -yearBuilt: String
    +Ship(name: String, yearBuilt: String)
    +getName(): String
    +getYearBuilt(): String
    +setName(name: String): void
    +setYearBuilt(year: String): void
    +print(): void
}

class CruiseShip {
    -maxPassengers: int
    +CruiseShip(name: String, yearBuilt: String, maxPassengers: int)
    +getMaxPassengers(): int
    +setMaxPassengers(passengers: int): void
    +print(): void
}

class CargoShip {
    -cargoCapacity: int
    +CargoShip(name: String, yearBuilt: String, cargoCapacity: int)
    +getCargoCapacity(): int
    +setCargoCapacity(capacity: int): void
    +print(): void
}

Ship <|-- CruiseShip
Ship <|-- CargoShip

@enduml
